--- a/package.json
+++ b/package.json
@@ -2,14 +2,11 @@
   "name": "repo",
   "private": true,
   "scripts": {
-    "build": "turbo run build",
     "dev": "turbo run dev",
-    "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
+    "build": "turbo run build",
+    "lint": "turbo run lint"
   },
   "devDependencies": {
-    "prettier": "^3.7.4",
     "turbo": "^2.7.3",
     "typescript": "5.9.2"
   },
