--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,10 +11,15 @@
     "check-types": "next typegen && tsc --noEmit"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@repo/ui": "*",
+    "@vercel/analytics": "^1.6.1",
+    "class-variance-authority": "^0.7.1",
     "next": "16.1.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
