--- a/package.json
+++ b/package.json
@@ -17,5 +17,12 @@
   "workspaces": [
     "apps/*",
     "packages/*"
-  ]
+  ],
+  "dependencies": {
+    "@tanstack/react-table": "^8.21.3",
+    "date-fns": "^4.1.0",
+    "lucide-react": "^0.562.0",
+    "react-icons": "^5.5.0",
+    "recharts": "^3.6.0"
+  }
 }
